[package]
name = "invoker-explore"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.0"

[dev-dependencies]
criterion = "0.3"
invoker-explore = { path = "./" }
once_cell = "1.0"


[[bench]]
name = "dyn_invoker"
harness = false

