[package]
name = "invoker-explore"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.0"
futures-util = "0.3"
anyhow = "1.0"
thiserror = "1.0"
serde = "1.0"
serde_json = "1.0"
pin-project-lite = "0.2"

[dev-dependencies]
criterion = "0.3"
invoker-explore = { path = "./" }
once_cell = "1.0"


[[bench]]
name = "dyn_invoker"
harness = false

